fix bug visible

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,10 @@ nav .menuItems {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.visible {
+  visibility: visible;
+}
+
 .hidden {
   visibility: hidden;
   transition-delay: 1s;
